tests/errors/undeclared_use.l26
{
    int x;
    x = y;          // error: y is undeclared
    write x;
}
